unpackaged/main/default/objects/Solution/fields/EDY_ORGCUSTOM__Old_SolutionName__c.field-meta.xml
<CustomField>
    <fullName>EDY_ORGCUSTOM__Old_SolutionName__c</fullName>
    <label>Old Solution Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>