unpackaged/main/default/objects/Solution/fields/EDY_ORGCUSTOM__Old_SolutionNote__c.field-meta.xml
<CustomField>
    <fullName>EDY_ORGCUSTOM__Old_SolutionNote__c</fullName>
    <label>Old Solution Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>